[package]
name = "smtpbis"
version = "0.1.8"
authors = ["Jonathan Bastien-Filiatrault <jonathan@zerospam.ca>"]
edition = "2024"
description = "Asynchronous ESMTP service library."
license = "GPL-3.0+"
categories = ["email", "network-programming"]
readme = "README.md"
homepage = "https://github.com/zerospam/smtpbis"
repository = "https://github.com/zerospam/smtpbis.git"

[dependencies]
rustyknife = {git = "https://github.com/SabrinaJewson/rustyknife", rev = "9b4cad5181dbe1f4aab5a12b5e1cf705dc264c83", features=["quoted-string-rfc2047"]}
tokio = {version="1.45.1", features=["io-util"]}
tokio-util = {version="0.7.15", features=["codec"]}
bytes = "1.10.1"
futures-util = { version = "0.3.31", features = ["sink"] }
